--- a/www/templates/login.html
+++ b/www/templates/login.html
@@ -8,7 +8,7 @@
     </div>
     <div class="list padding">
       <label class="item item-input" id="user--email--input">
-          <input type="text" placeholder="email" ng-model="user.email" id="user--email--text">
+          <input type="email" placeholder="email" ng-model="user.email" id="user--email--text">
       </label>
       <label class="item item-input" id="user--password--input">
           <input type="password" placeholder="password" ng-model="user.pwdForLogin" id="user--password--text">
