--- a/www/templates/tabs.html
+++ b/www/templates/tabs.html
@@ -15,7 +15,8 @@ navigation history that also transitions its views in and out.
       <ion-nav-view name="tab-chat"></ion-nav-view>
   </ion-tab>
 
-  <ion-tab title="Edit Profile" icon-off="ion-ios-compose-outline" icon-on="ion-ios-compose" href="#/editprofile">
+  <ion-tab title="Edit Profile" icon-off="ion-ios-compose-outline" icon-on="ion-ios-compose" href="#/settings">
+    <ion-nav-view name='settings'></ion-nav-view>
   </ion-tab>
 
   <ion-tab title="Friends" icon-off="ion-ios-people-outline" icon-on="ion-ios-people" href="#/tab/friends">
