--- a/www/css/style.css
+++ b/www/css/style.css
@@ -720,6 +720,7 @@ h2.sections{
   text-align: center;
   font-family: 'Bariol', 'Lato', sans-serif;
   list-style-type: circle;
+  position:relative;
 }
 
 .profile__box{
@@ -914,6 +915,73 @@ ul.icon li
   border:none;
   font-family: 'Bariol', 'Lato', sans-serif;
   font-size: 30px;
+}
+
+.changeProfPic{
+  display:block;
+  max-width: 100%;
+  height: 100%;
+  z-index: 10;
+  background-color: black;
+  opacity: .5;
+  color:white;
+  text-align: center;
+}
+
+.circText{
+  position: absolute;
+  top: 50px;
+  font-size: 12px;
+  opacity: 1;
+}
+
+.editBio{
+  position: absolute;
+  top: 240px;
+  left:0;
+  right:0;
+  margin: auto;
+  width:158px;
+  height: 120px;
+  background-color: #91CC91;
+  color: white;
+}
+
+.bioButton{
+  position: absolute;
+  bottom: 80px;
+  right: -110px;
+  background-color: #3d805b;
+  color: white;
+  border:none;
+  border-radius: 5px; 
+}
+
+.exInterest{
+  color: red;
+  width:50px;
+  margin: 1px 1px 1px 1px;
+  position:absolute;
+  top:5px;
+  right:45px;
+}
+
+.addPhotoBox{
+  width:245px;
+  height:245px;
+  background-color: black;
+  opacity: .7;
+  right:0;
+  left:0;
+  margin:auto;
+  color:white;
+  position:relative;
+  font-size: 20px;
+}
+.photoBoxText{
+  position: absolute;
+  top:43%;
+  left: 20%;
 }
 /*ul.icon li:before
 {
