--- a/www/templates/settings.html
+++ b/www/templates/settings.html
@@ -2,5 +2,5 @@
 </ion-nav-bar>
 
 <ion-view view-title="Settings">
-<ion-item class='move__down item-remove-animate item-avatar item-icon-right' href='#/profile/{{ vm.userID}}'>THIS IS SO GAY</ion-item>
+<ion-item class='move__down item-remove-animate item-avatar item-icon-right' href='#/profile/{{ vm.userID}}'>View Profile</ion-item>
 </ion-view>
