Create view for events and route the events view to proper pages

--- a/www/css/style.css
+++ b/www/css/style.css
@@ -1024,5 +1024,6 @@ input[type=date], input[type=time] {
  * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * */
 
 #event--description {
-
+  margin-top: 200px;
 }
+
