--- a/www/templates/viewEvent.html
+++ b/www/templates/viewEvent.html
@@ -6,6 +6,9 @@
 
 <ion-view>
   <div id="event--description">
-
+    <div id="event--description">Description: {{vm.description}}</div>
+    <div>Location: {{vm.location}}</div>
+    <div>Date: {{vm.eventDate}}</div>
+    <div>Number of People: {{vm.numPeople}}</div>
   </div>
 </ion-view>
