--- a/www/templates/profile.html
+++ b/www/templates/profile.html
@@ -17,22 +17,22 @@
       <div class="circular" ng-show='isEdit("on")'>
         <div class='changeProfPic' ng-click='addMedia(0)'><div class='circText'>Change Profile Picture</div></div>
       </div>
-      <h2 class='sections' id='displayName' style='border-bottom: none;'>{{user.displayName}}</h2>
+      <h2 class='sections' id='displayName'>{{user.displayName}}</h2>
       <div class='bio__info'>
         <div class='fill__text1' ng-hide='isEdit("on")'>{{user.bio}}</div>
       </div>
         <form ng-show='isEdit("on")' class='editBio'>
-            <textarea ng-model='birds' style='background-color:#91CC91; color:white;'>Add Biography Here</textarea>
+            <textarea ng-model='birds' id='changeTextArea'>Add Biography Here</textarea>
             <button ng-click='addBio(birds)' class='bioButton'>Add Biography</button>
         </form>
     </div>
-    <div style='background-color: white;'>
+    <div id='whitey'>
       <div class="button-bar">
         <a class="button button-block button-positive activated radioButton" id="radioButton" ng-class="{'testTest': isActive('Interests')}" ng-click="setActive('Interests')">Interests</a>
         <a class="button button-block button-positive activated" id="radioButton" ng-class="{'testTest': isActive('Accomplishments')}" ng-click="setActive('Accomplishments')">Accomplishments</a>
         <a class="button button-block button-positive activated" id="radioButton" ng-class="{'testTest': isActive('Photos')}" ng-click="setActive('Photos')">Photos</a>
       </div>
-      <div class='profile__box' style='background-color: white;' ng-show='isActive("Interests")'>
+      <div class='profile__box' id='whitey' ng-show='isActive("Interests")'>
         <ion-content has-header='true'>
           <div ng-show='isActive("Interests")'>
             <h2 class='sections'>Interests</h2>
@@ -45,7 +45,7 @@
           </div>
         </ion-content>
       </div>
-      <div class='profile__box' style='background-color: white;' ng-show='isActive("Photos")'>
+      <div class='profile__box' id='whitey' ng-show='isActive("Photos")'>
         <div ng-show='isActive("Photos")'>
           <h2 class='sections'>Photos</h2>
           <ul ng-hide='isEdit("on")' rn-carousel class="item item-image padding profpic" id='photoCar'><li ng-repeat='image in picGallery'><img ng-src="data:image/png;base64,{{ image.picture }}" class='layer'></li>
