--- a/www/templates/signup.html
+++ b/www/templates/signup.html
@@ -1,7 +1,7 @@
 <ion-modal-view id="signup--wrapper">
   <ion-header-bar class="bar bar-header">
     <h1 class="title" id="new--account--title">Create New Account</h1>
-    <button class="button button-clear button-primary" ng-click="modal.hide()" id="new--account--cancel">Cancel</button>
+    <button class="button button-clear button-primary" ng-click="vm.modal.hide()" id="new--account--cancel">Cancel</button>
   </ion-header-bar>
   <div class="padding">
     <div class="list" id="create--new--user">
