--- a/www/templates/login.html
+++ b/www/templates/login.html
@@ -18,7 +18,7 @@
       </button>
     </div>
     <div class="list" style="text-align:center">
-      <button ng-click="modal.show()" class="button button-small button-outline icon-left ion-person-add button-positive" id="create--user">
+      <button ng-click="vm.modal.show()" class="button button-small button-outline icon-left ion-person-add button-positive" id="create--user">
           Signup
       </button>
     </div>
