Users can join events and leave events

--- a/www/templates/viewEvent.html
+++ b/www/templates/viewEvent.html
@@ -11,4 +11,7 @@
     <div>Date: {{vm.eventDate}}</div>
     <div>Number of People: {{vm.numPeople}}</div>
   </div>
+
+  <button ng-click="vm.joinEvent()">JOIN</button>
+  <button ng-click="vm.unjoinEvent()">UNJOIN</button>
 </ion-view>
