Join and unjoin buttons properly show

--- a/www/templates/viewEvent.html
+++ b/www/templates/viewEvent.html
@@ -12,6 +12,6 @@
     <div>Number of People: {{vm.numPeople}}</div>
   </div>
 
-  <button ng-click="vm.joinEvent()">JOIN</button>
-  <button ng-click="vm.unjoinEvent()">UNJOIN</button>
+  <button ng-click="vm.joinEvent()" ng-hide="vm.joined">JOIN</button>
+  <button ng-click="vm.unjoinEvent()" ng-show="vm.joined">UNJOIN</button>
 </ion-view>
