Change text size and format in event view

--- a/www/css/style.css
+++ b/www/css/style.css
@@ -1024,6 +1024,11 @@ input[type=date], input[type=time] {
  * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * */
 
 #event--description {
-  margin-top: 200px;
+  margin-top: 50px;
+}
+
+#event--description div {
+  margin-bottom: 5px;
+  font-size: 18px;
 }
 
