--- a/www/templates/createEvent.html
+++ b/www/templates/createEvent.html
@@ -22,7 +22,7 @@
       <label class="ce--description">Enter Description:
         <textarea rows="4" cols="50" maxlength="160" ng-model="vm.description"></textarea>
       </label>
-      <label class="ce--people">Number of People Needed (including yourself)
+      <label class="ce--people">People Needed (including yourself)
         <input type="number" min="2" ng-model="vm.numPeople">
       </label>
       <label class="ce--location">Enter Location:
