--- a/www/templates/login.html
+++ b/www/templates/login.html
@@ -7,10 +7,10 @@
       </div>
     </div>
     <div class="list padding">
-      <label class="item item-input" id="user--email--input">
+      <label class="item-input" id="user--email--input">
           <input type="email" placeholder="email" ng-model="user.email" id="user--email--text">
       </label>
-      <label class="item item-input" id="user--password--input">
+      <label class="item-input" id="user--password--input">
           <input type="password" placeholder="password" ng-model="user.pwdForLogin" id="user--password--text">
       </label>
       <button ng-click="vm.signIn(user)" class="button button-block button-positive activated" id="sign--in">
