Display users who are attending an event on the view event page

--- a/www/css/style.css
+++ b/www/css/style.css
@@ -1032,3 +1032,7 @@ input[type=date], input[type=time] {
   font-size: 18px;
 }
 
+#event--attending {
+  margin-top: 100px;
+  font-size: 18px;
+}
