--- a/www/templates/tab-friends.html
+++ b/www/templates/tab-friends.html
@@ -10,18 +10,22 @@
     <i class="icon ion-search placeholder-icon"></i>
     <input type="text" placeholder="Friend" ng-model="query">
   </label>
-  <ion-content>
+  <ion-content id="friends--content">
     <ion-list>
-      <ion-item href="#/friends/friendrequests" ng-show="vm.hasReq" class="friend--lower">View Friend Requests<div class="ion-alert rightButton"></div></ion-item>
-      <ion-item ng-repeat="friend in vm.friends | filter:query" href="#/profile/{{friend.id}}" class="item-remove-animate item-avatar item-icon-right friend--lower" id='friendBox'>
-        <img ng-src="data:image/png;base64,{{friend.pic}}" style="width: 64px; height: 64px">
-        <h2>{{friend.displayName}}</h2>
-        <div class='friendDesc'>{{friend.bio}}</div>
-        <!-- <i class="icon ion-chevron-right icon-accessory" id="right--arrow--rooms"></i> -->
-        <button class='friendChat' ng-hide="blocked" id='bubblify'>
-          <a href="#/messages/{{friend.id}}" class='ion-chatbubble-working' id='bubblify'></a>
-        </button>
-      </ion-item>
+        <ion-item href="#/friends/friendrequests" ng-show="vm.hasReq" class="friend--lower">View Friend Requests
+          <div class="ion-alert rightButton"></div>
+        </ion-item>
+
+        <ion-item class="item-remove-animate item-avatar item-icon-right search--item" ng-repeat="friend in vm.friends | filter:query" type="item-text-wrap" href="#/profile/{{friend.id}}" >
+          <img ng-src="data:image/png;base64,{{friend.pic}}" style="width: 64px; height: 64px">
+          <h2 id="search--username">{{friend.displayName}}</h2>
+          <button class='friendChat' ng-hide="blocked" id='bubblify--2'>
+            <a href="#/messages/{{friend.id}}" class='ion-chatbubble-working' id='bubblify--2'></a>
+          </button>
+        </ion-item>
+      </ion-list>
+
+
     </ion-list>
   </ion-content>
 </ion-view>
