--- a/www/templates/viewEvent.html
+++ b/www/templates/viewEvent.html
@@ -27,6 +27,7 @@
     <div class="event__group--join" id="joined" ng-click="vm.unjoinEvent()" ng-show="vm.joined"><p class="event__group--text">LEAVE</p></div>
   </div>
 
+  <button ng-click="">Group Chat</button>
 
   <ion-content id="event--content">
     <h2 id="event--attending">People Going</h2>
