--- a/www/templates/viewEvent.html
+++ b/www/templates/viewEvent.html
@@ -28,7 +28,7 @@
     </div>
   </div>
 
-  <button ng-click="">Group Chat</button>
+  <a href="#/chat/{{vm.eventId}}">Group Chat</a>
 
   <ion-content id="event--content">
     <h2 id="event--attending">People Going</h2>
