--- a/www/templates/eventChat.html
+++ b/www/templates/eventChat.html
@@ -5,17 +5,12 @@
 </ion-nav-bar>
 
 <ion-view view-title="Group Chat">
-  <ion-content id="group--content">
-    <section id="group--room">
-      <div ng-repeat="message in vm.messages track by $index" class="group--chat">
-        <p>{{message.text}}</p>
-      </div>
-    </section>
-  </ion-content>
+  HELLO WORLD
   <div id="footer">
     <div class="item item-input" id="footer__bar">
      <form name="search_form" ng-submit="vm.sendMessage(vm.text);" id="user__form">
       <label class="item-input-wrapper" id="chat__input">
+<!--         <div class="button--input--text button--camera">+</div> -->
         <input type="text" name="search_input" ng-model="vm.text" id="user-message">
         <button class="button button--input">
           <p class="button--input--text">Send</p>
