--- a/www/templates/eventChat.html
+++ b/www/templates/eventChat.html
@@ -19,6 +19,7 @@
     <div class="item item-input" id="footer__bar">
      <form name="search_form" ng-submit="vm.sendMessage(vm.text);" id="user__form">
       <label class="item-input-wrapper" id="chat__input">
+<!--         <div class="button--input--text button--camera">+</div> -->
         <input type="text" name="search_input" ng-model="vm.text" id="user-message">
         <button class="button button--input">
           <p class="button--input--text">Send</p>
