--- a/www/templates/viewEvent.html
+++ b/www/templates/viewEvent.html
@@ -27,7 +27,7 @@
     <div class="event__group--join" id="joined" ng-click="vm.unjoinEvent()" ng-show="vm.joined"><p class="event__group--text">LEAVE</p></div>
   </div>
 
-  <button ng-click="">Group Chat</button>
+  <a href="#/chat/{{vm.eventId}}">Group Chat</a>
 
   <ion-content id="event--content">
     <h2 id="event--attending">People Going</h2>
