--- a/www/templates/settings.html
+++ b/www/templates/settings.html
@@ -1,6 +1,20 @@
-<ion-nav-bar class="nav__bar">
+<ion-nav-bar ng-controller="MyCtrl" class="nav__bar">
+  <ion-nav-back-button id="back__button"
+    ng-click="myGoBack()"> &nbsp; Back
+  </ion-nav-back-button>
+  <h4>Profile</h4>
 </ion-nav-bar>
 
 <ion-view view-title="Settings">
-<ion-item class='move__down item-remove-animate item-avatar item-icon-right' href='#/profile/{{ vm.userID}}'>View Profile</ion-item>
+<ion-content>
+    <ion-list>
+		<ion-item type="item-text-wrap" padding='true' href='#/profile/{{ vm.userID}}'>View Profile
+	        <i class="icon ion-chevron-right icon-accessory" id="right--arrow--search"></i>
+		</ion-item>
+		<ion-item type="item-text-wrap" padding='true' ng-click="vm.logout()">Logout
+			<i class="icon ion-chevron-right icon-accessory" id="right--arrow--search"></i>
+		</ion-item>
+
+	</ion-list>
+</ion-content>
 </ion-view>
